--- a/mockup-editor/mockup-client/src/main/web/client/src/app/editor/toolbarextension/toolbarextension.component.scss
+++ b/mockup-editor/mockup-client/src/main/web/client/src/app/editor/toolbarextension/toolbarextension.component.scss
@@ -2,9 +2,13 @@
     width: 15em;
     background-color: #F1F1F1;
     //border-left: 1px solid #CACACA;
-    height: 100%;
     position: fixed;
+    left: 60px;
+    bottom: 0px;
+    top: 55px;
     z-index: 1;
+    overflow-y:auto;
+    overflow-x:hidden;
 }
 
 .extensionhidden {
